Update license in package.json, add GPL-2.0
Format ref: https://docs.npmjs.com/files/package.json

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "url": "git+https://github.com/algolia/algoliasearch-wordpress.git"
   },
   "author": "",
-  "license": "MIT",
+  "license": "(MIT OR Apache-2.0)",
   "bugs": {
-    "url": "https://github.com/algolia/algoliasearch-wordpress/issues"
+    "url": "https://github.com/algolia/algoliasearch-wordpress/issues"Ref:
   },
   "homepage": "https://community.algolia.com/wordpress",
   "dependencies": {
